# apt-data-collection-manipulation

./: .gitignore  README.md  collect_and_process.py  collect_naver_listing.py  load_naver_csv.py  pyproject.toml  update_and_migrate.py
agent/: config.py  graph.py  state.py
agent/agents/: notebooklm_agent.py  sql_agent.py
agent/prompts/: sql_prompt.py  supervisor.py
agent/tools/: notebooklm_tools.py  sql_tools.py
docs/: Dokploy 실전 배포 매뉴얼.md  네이버_매물데이터_인사이트_가이드.md  사용자_매뉴얼.md  아파트 데이터 가공(최초).md  아파트 데이터 수집(최초).md  에이전트_서비스_운영_가이드.md
docs/analysis/: 데이터_연계_방안.md  데이터_인사이트_분석.md  매핑기반_쿼리검증_결과.md
pipeline/: collect_news.py  create_mapping.py  register_news_to_notebooklm.py  utils.py
shared/: config.py
webapp/: app.py
webapp/routes/: chat.py  news_insight.py
webapp/static/: app.js  style.css
webapp/templates/: index.html
